<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">School Life</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="no_subject">Press + to add a New Subject</string>
    <string name="no_task">Press + to add a New Task</string>
    <string name="edit">Edit</string>
    <string name="help">Help</string>
    <string name="classroom"><b>Classroom</b></string>
    <string name="subject"><b>Subject</b></string>
    <string name="professor"><b>Professor</b></string>
    <string name="abbreviation"><b>Abbreviation</b></string>
    <string name="new_subject_title">New Subject</string>
    <string name="confirm_button">Confirm</string>
    <string name="delete">Delete</string>
    <string name="new_task_title">New Task</string>
    <string name="explanation"><b>Explanation</b></string>
    <string name="task"><b>Task</b></string>
    <string name="tasks"><b>Tasks</b></string>
    <string name="title"><b>Title</b></string>
    <string name="description"><b>Description</b></string>
    <string name="date"><b>Date</b></string>
    <string name="mark"><b>Mark</b></string>
    <string name="revision">Revision</string>
    <string name="revision_date"><b>Revision date</b></string>
    <string name="completed"><b>Completed</b></string>
    <string name="feelings"><b>Feelings</b></string>
    <string name="title_activity_subject">Title Activity Subject</string>
    <string name="delete_all">Delete All</string>
    
    <string name="help_about_title">\n<b>About SchoolLife:</b></string>
    <string name="help_about">\tversion 1.0</string>
    <string name="help_authors_title">\n<b>Authors</b></string>
    <string name="help_authors">\tDaniel Sánchez Seijo\n\tJosé Santos Sánchez Sánchez</string>
    <string name="help_contact_title">\n<b>Contact information:</b></string>
    <string name="help_contact">\tdaniseijo12@alumnos.upm.es\n\tjs.sanchez@alumnos.upm.es</string>
    <string name="help_usage_title">\n<b>Usage</b></string>
    <string name="help_usage">\tSchool Life help you to manage </string>
    
    <string name="delete_database">Delete Database</string>
    <string name="database_deleted">Database deleted</string>
    <string name="delete_tasks">Delete all the Tasks of this Subject</string>
    <string name="tasks_deleted">Tasks of this Subject deleted</string>

    <string-array name="tasks_array">
        <item>Exam</item>
        <item>Exercise</item>
    </string-array>

    <string name="title_activity_task">TaskActivity</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="change_date">Change Date</string>
    <string name="exam">Exam</string>
    <string name="exercise">Exercise</string>
    <string name="type"><b>Type</b></string>
    <string name="edit_task">Edit Task</string>
    
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>