<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/scrollView1"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" >
        
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".TaskActivity" >

    <TextView
        android:id="@+id/view_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:ems="10"
        android:textIsSelectable="false" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/view_date"
        android:layout_below="@+id/view_type"
        android:layout_marginTop="10dp"
        android:text="@string/description" />

    <TextView
        android:id="@+id/view_explanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:ems="10"
        android:textIsSelectable="false" />

    <TextView
        android:id="@+id/edit_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/view_date"
        android:layout_below="@+id/view_date"
        android:ems="10"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textIsSelectable="false" />
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:text="@string/type" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_date"
        android:layout_below="@+id/edit_date"
        android:text="@string/mark" />

    <EditText
        android:id="@+id/edit_mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignRight="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <CheckBox
        android:id="@+id/edit_revision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_mark"
        android:layout_below="@+id/edit_mark"
        android:layout_marginTop="16dp"
        android:text="@string/revision" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textIsSelectable="false" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_revision"
        android:layout_below="@+id/edit_revision"
        android:text="@string/revision_date" />

    <TextView
        android:id="@+id/view_revision_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="17dp"
        android:text="@string/date" />

    <CheckBox
        android:id="@+id/edit_completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/completed" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/view_revision_date"
        android:layout_below="@+id/button2"
        android:text="@string/feelings" />

    <RatingBar
        android:id="@+id/feelingsStars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView6"
        android:layout_below="@+id/textView6" />

    <EditText
        android:id="@+id/edit_feelings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/feelingsStars"
        android:layout_below="@+id/feelingsStars"
        android:ems="10"
        android:hint="@string/feelings"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/view_explanation"
        android:layout_below="@+id/view_explanation"
        android:text="@string/date" />

    <TextView
        android:id="@+id/view_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView5"
        android:layout_marginLeft="25dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:text="@string/date" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView6"
        android:layout_below="@+id/view_revision_date"
        android:text="@string/change_date" />

</RelativeLayout>
</ScrollView>