<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateSubject" >
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_marginTop="14dp"
        android:text="@string/subject" />
    <EditText
        android:id="@+id/edit_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:hint="@string/subject"
        android:inputType="textCapWords">
        <requestFocus />    </EditText>
    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/edit_abbreviation"
        android:layout_marginTop="10dp"
        android:text="@string/professor" />
    <EditText
        android:id="@+id/edit_professor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:ems="10"
        android:hint="@string/professor"
        android:inputType="textCapWords" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/edit_professor"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="10dp"
        android:text="@string/classroom" />
    <EditText
        android:id="@+id/edit_classroom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:ems="10"
        android:hint="@string/classroom"
        android:inputType="textCapCharacters" />

    <EditText
        android:id="@+id/edit_abbreviation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:hint="@string/abbreviation"
        android:inputType="textCapCharacters" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_abbreviation"
        android:layout_below="@+id/edit_subject"
        android:layout_marginTop="10dp"
        android:text="@string/abbreviation" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_classroom"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/confirm_button" />
</RelativeLayout>