<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
        
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".CreateTask" >

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textCapWords" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/view_date"
        android:layout_below="@+id/edit_title"
        android:layout_marginTop="10dp"
        android:text="@string/explanation" />

    <EditText
        android:id="@+id/edit_explanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:ems="10"
        android:hint="@string/explanation"
        android:inputType="textCapWords" />

    <TextView
        android:id="@+id/view_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/edit_explanation"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="10dp"
        android:text="@string/date" />

    <TextView
        android:id="@+id/edit_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/view_date"
        android:layout_below="@+id/view_date"
        android:ems="10"
        android:hint="@string/date"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textIsSelectable="false" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_date"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/confirm_button" />

    <Spinner
        android:id="@+id/task_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignParentTop="true" >

        <requestFocus />
    </Spinner>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/task_type"
        android:layout_below="@+id/task_type"
        android:text="@string/title" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edit_date"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/view_date"
        android:text="@string/change_date" />
</RelativeLayout>

 </ScrollView>